--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   </head>
 
   <body>
-    
+
+<%= render 'shared/login_items' %>
+
        <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
