--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: event) do |form| %>
   <% if event.errors.any? %>
-    <div style="color: red">
+    <div class="notification is-warning content">
       <h2><%= pluralize(event.errors.count, "error") %> prohibited this event from being saved:</h2>
 
       <ul>
@@ -11,22 +11,31 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
-  </div>
+    <div class="field is-grouped">
+    <div class="control">
+    <%= form.text_field :title, class: "input ", placeholder: "Event Title" %>
+    </div>
+    <div class="control">
+    <%= form.text_field :location, class: "input", placeholder: "location" %>
+    </div>
+    <div class="control">
+    <%= form.date_field :date, class: "input" %>
+    </div>
+    <div class="select">
+    <%= form.select :status, ['public', 'private'], selected: 'public' %>
+    </div>
+    </div>
 
-  <div>
-    <%= form.label :body, style: "display: block" %>
-    <%= form.text_area :body %>
-  </div>
-
-  <div>
-    <%= form.label :date, style: "display: block" %>
-    <%= form.date_field :date %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
+    <div class="control">
+    <%= form.text_area :body, class: "textarea ", placeholder: "Event Description" %>
+    </div>
+    <br>
+    <div class="field is-grouped">
+    <div class="control">
+    <%= form.submit "Save", class:"button is-success" %>
+    </div>
+    <div class="control"> 
+    <%= link_to "Back to events", events_path, class: "button is-link"%>
+    </div>
+    </div>
 <% end %>
