--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,25 @@
+<section class="section">
+<div class="container content">
+  
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :email, class: "label" %>
+    <div class="control">
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input", placeholder: "example@email.com" %>
+    <p class="help">We will send you an email recovery instructions</p>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+  <div class="actions control">
+    <%= f.submit "Send me reset password instructions", class: "button is-info" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+  
+</div>
+</section>
