--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New event</h1>
+<section class="section">
+  <div class="container content">
+    
+<h1>Create a New event</h1>
 
 <%= render "form", event: @event %>
 
-<br>
 
-<div>
-  <%= link_to "Back to events", events_path %>
-</div>
+  </div>
+</section>
