--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,10 +1,18 @@
-<p style="color: green"><%= notice %></p>
+<section class="section">
+  <div class="container"> <br>
 
-<%= render @event %>
+   <div class="columns">
+    <div class="column is-three-quarters">
+      <%= render @event %><br>
+    </div>
+    <div class="column"> 
+       <%= render 'shared/card' %><br>
+    </div>
+  </div>
 
-<div>
-  <%= link_to "Edit this event", edit_event_path(@event) %> |
-  <%= link_to "Back to events", events_path %>
+  <% if user_signed_in? && @event.creator.id == current_user.id %>
+    <%= render 'shared/event_buttons' %>
+  <% end %>
 
-  <%= button_to "Destroy this event", @event, method: :delete %>
-</div>
+  </div>
+</section>
